--- a/templates/layouts/partials/_header.html
+++ b/templates/layouts/partials/_header.html
@@ -1,3 +1,3 @@
 <header>
-	<p><img src="/static/images/grandpy_accueil.png" width="130px" height="130px" alt="GrandPy Bot" /> <span class="citation">Sans vieille annecdote, la puissance de Google Map n'est rien !</span></p>
+	<p><img src="/static/images/grandpy_accueil.png" width="130px" height="130px" alt="GrandPy Bot" /> <span class="titre">[ GRANDPY BOT ]</span> </br> <span class="citation">Sans vieille annecdote, la puissance de Google Map n'est rien !</span></p>
 </header>
