Add modif + AJAX

--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -31,6 +31,8 @@
 
         {% endwith %}
 
+    <script src="{{ url_for('static', filename='js/ajax.js') }}"></script>
+
 	</div>
 
 	{% include 'layouts/partials/_footer.html' %}
