--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>{% block title %}GrandPy Bot{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
+	<script src="{{ url_for('static', filename='js/jquery-3.3.1.js') }}"></script>
 </head>
 <body>
 
@@ -30,8 +31,6 @@
         {% endif %}
 
         {% endwith %}
-
-    <script src="{{ url_for('static', filename='js/ajax.js') }}"></script>
 
 	</div>
 
