--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" id="testtest">
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %}GrandPy Bot{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
-	<script src="{{ url_for('static', filename='js/jquery-3.3.1.js') }}"></script>
+	<!--<script src="{{ url_for('static', filename='js/jquery-3.3.1.js') }}"></script>-->
 </head>
 <body>
 
