--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -6,21 +6,47 @@
 
 	<p>N'hésitez pas à demander une petite adresse à notre GrandPy préféré !</p>
 
-        <form method="post">
+    <form method="post">
 
-            <label for="msg">Votre question</label><br />
+        <label for="msg">Votre question</label><br />
 
-            <textarea id="msg" name="msg" class="msg"></textarea><br />
+        <textarea type= "text" id="msg" name="msg" class="msg"></textarea><br />
 
-            <input type="submit" value="Envoyer" id="formulaire">
+        <button type="submit" id="formulaire">Envoyer</button>
 
-        </form>
+    </form>
 
-    </br><iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBtKZJuJonuqxYsm_f6BTcvP3UTQpzZ8gU&q={{ search }}Paris+France" allowfullscreen></iframe> 
+    <div id="map">
 
-	</br></br><img src="/static/images/grandpy_{{ grandpy }}.png" width="10%" height="10%" />
+        </br><iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBtKZJuJonuqxYsm_f6BTcvP3UTQpzZ8gU&q={{ search }}Paris+France" allowfullscreen></iframe> 
+
+    </div>
+
+    <div id="image"></div>
 
     <div id="afficher"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!--<script text=javascript>
+
+        $("#formulaire").click(function(){
+
+            alert("clic !");
+
+            $.ajax({
+
+                url : '/',
+
+                type : 'GET',
+
+                data : 'valeur1=' + msg,
+
+                dataType : 'JSON'
+
+            });
+        });
+    </script>-->
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
