--- a/templates/layouts/partials/_header.html
+++ b/templates/layouts/partials/_header.html
@@ -1,3 +1,24 @@
 <header>
-	<p><img src="/static/images/grandpy_accueil.png" width="130px" height="130px" alt="GrandPy Bot" /> <span class="titre">[ GRANDPY BOT ]</span> </br> <span class="citation">Sans vieille annecdote, la puissance de Google Map n'est rien !</span></p>
+	
+
+		<div class="row">
+
+			<div class="col-md-3">
+				<img src="/static/images/grandpy_accueil.png" width="130px" height="130px" alt="GrandPy Bot" />
+			</div>
+
+			<div class="col-md-9">
+				<span class="titre">[ GRANDPY BOT ]</span> 
+			</div>
+
+		</div>
+
+		<div class="row">
+
+		<div class="col-md-12">
+			<span class="citation">Sans vieille annecdote, la puissance de Google Map n'est rien !</span>
+		</div>
+
+	</div>
+
 </header>
