--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,4 @@
+
 body
 {
     background-color: #fff;
@@ -7,9 +8,14 @@ body
 .wrapper
 {
     width: 1440px;
-    min-width: 800px;
     max-width: 90%;
     margin: 0 auto;
+    line-height: 30px;
+}
+
+#afficher
+{
+    font-style: italic;
 }
 
 a
@@ -23,25 +29,75 @@ header, footer
     background-color: #334;
     color : #fff;
     padding: 3px;
-    padding-left: 50px;
     border-radius: 5px;
+    border: 2px solid black;
 }
 
 .citation
 {
     font-style: italic;
-    font-size: 1.75em;
+    font-size: 1.25em;
 }
 .titre
 {
     font-style: bold;
     font-size: 3.5em;
     color: #e11;
+    line-height: 250%;
+}
+
+@media (max-width: 768px) {
+    .titre {
+        font-size : 2.5em;
+        line-height: 150%;
+    }
+}
+
+
+@media (max-width: 662px) {
+    .wrapper, footer {
+        font-size: 0.8em;
+    }
+    .titre {
+        font-size : 2em;
+        line-height: 0%;
+    }
+    .citation {
+        font-size: 0.9em;       
+    }
+}
+
+.name
+{
+    font-style: bold;
+    font-size: 1.5em; 
 }
 
 textarea
 {
-    width: 400px;
-    height: 150px;
-    resize: none;
+    width: 80%;
+    height: 85px;
+}
+
+
+body {
+
+  padding-top: 10px;
+
+}
+
+[class*="col-"], footer, header {
+
+/*
+  background-color: lightgreen;
+
+  border: 2px solid black;
+
+  border-radius: 6px;
+
+  line-height: 40px;
+*/
+
+  text-align: center;
+
 }
