--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -2,9 +2,15 @@
 <html lang="fr" id="testtest">
 <head>
 	<meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>{% block title %}GrandPy Bot{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
-	<!--<script src="{{ url_for('static', filename='js/jquery-3.3.1.js') }}"></script>-->
+
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+
+
 </head>
 <body>
 
@@ -35,6 +41,8 @@
 	</div>
 
 	{% include 'layouts/partials/_footer.html' %}
+
+	<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
 </body>
 </html>
