--- a/templates/layouts/partials/_footer.html
+++ b/templates/layouts/partials/_footer.html
@@ -1,4 +1,14 @@
 <footer>
-	<p>CARRASCO BAPTISTE</br></br> <a href="https://github.com/cenotapHe/GrandPy-Bot"><img src="/static/images/github.png" width="80px" height="80px" alt="Logo Git Hub" /></a> <a href="https://www.linkedin.com/in/carrasco-baptiste/"><img src="/static/images/linkedin.png" width="80px" height="80px" alt="Logo Linkedin" /></a><p>
+
+	<p class="name">CARRASCO BAPTISTE
+
+		</br>
+
+		<a href="https://github.com/cenotapHe/GrandPy-Bot"><img src="/static/images/github.png" width="80px" height="80px" alt="Logo Git Hub" /></a>
+
+		<a href="https://www.linkedin.com/in/carrasco-baptiste/"><img src="/static/images/linkedin.png" width="80px" height="80px" alt="Logo Linkedin" /></a>
+	</p>
+
 	<p>&copy; Copyright {{ now.year }} &middot; GrandPy Bot @ OpenClassrooms. No rights reserved.</p>
+
 </footer>
