--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -21,7 +21,7 @@
 
                 <textarea type= "text" id="msg" name="msg" class="msg" style="resize:none"></textarea><br />
 
-                <button type="submit" id="formulaire">Envoyer</button>
+                <button type="submit" id="form">Envoyer</button>
 
             </form>
             </br>
@@ -38,7 +38,7 @@
 
         <div id="image" class="col-md-2"></div>
 
-        <div id="afficher" class="col-md-10"></div>
+        <div id="display" class="col-md-10"></div>
 
     </div>
 
